# AsyncJobs

./: .gitignore  README.md  alembic.ini  create_test_data.py  env.example  populate_test_data.py  pyproject.toml  pytest.ini  requirements.txt  run.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: __init__.py
app/: config.py  main.py
app/auth/: __init__.py  dependencies.py  security.py
app/db/: __init__.py  database.py
app/models/: __init__.py  associations.py  base.py  company.py  job.py  tag.py  user.py
app/routers/: __init__.py  auth.py  companies.py  jobs.py  tags.py  users.py
app/schemas/: __init__.py  auth.py  company.py  job.py  tag.py  user.py
app/services/: __init__.py  company_service.py  job_service.py  tag_service.py  user_service.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/Common/: JobCard.tsx  SearchBar.tsx
frontend/src/components/Layout/: Footer.tsx  Navbar.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/data/: mockData.ts
frontend/src/pages/: Companies.tsx  CompanyDetail.tsx  Dashboard.tsx  Home.tsx  JobDetail.tsx  Jobs.tsx
frontend/src/pages/Auth/: Login.tsx  Register.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
scripts/: populate_test_data.py
tests/: conftest.py  test_api.py  test_main.py
